2015-09-21  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * slice_window/undo.c, etc.: Implement N-level undo during
	painting.

2015-09-21  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * slice_window/colour_coding.c, slice_window/draw_slice.c: Avoid
	creating or using unreasonably large or small colour tables.
	Instead, use the color_coding_struct object directly by
	calling the new bicpl API "create_volume_slice_coding()".
	Requires bicpl version >= 1.4.70.

2015-09-17  Robert D. Vincent <robert.d.vincent@mcgill.ca
   * cursor_contours/contours.c: Did some refactoring, which should
	have little visible impact.

2015-09-09  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * main/main.c - Force slice cursor and 3D cursor to be consistent
	during initialization. This corrects a bug where the two values
	are initialized independently and could be quite different if the
	extent of the loaded 3D objects was much greater than the extent of
	the loaded volume.

2015-08-04  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * {various} - Eliminate memory allocation issues associated with errors
	during string or file input.
   * main/main.c - Manage initial directory used by file open/save dialogs.

2015-08-03  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * main/main.c - Fix handling of a number of issues in the new input
	dialogs, especially avoid re-prompting when the "Cancel" button
	is pressed (Github issue #6).
   * segmenting/painting.c - Don't require cursor to move before labeling
	voxels (Github issue #7).

2015-06-29  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * callbacks/call_globals.c, segmenting/painting.c: Fix some memory
	access bugs.

2015-06-18  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * callbacks/quit.c, main/graphics.c, et al.: Save and restore
	window state from ~/.mni-displayrc

2015-06-16  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * main/main.c: Fix input fallback behavior when zenity not found.